ft_containers-unit-test/logs.txt
In file included from ../vector_tests/assign().cpp:1:
In file included from ../vector_tests/../system/system_methods.ipp:2:
In file included from ../vector_tests/../system/lib.hpp:12:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/array:111:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:602:19: error: invalid operands to binary expression ('ft::iterator<int>' and 'ft::iterator<int>')
    return __last - __first;
           ~~~~~~ ^ ~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:610:12: note: in instantiation of function template specialization 'std::__1::__distance<ft::iterator<int> >' requested here
    return __distance(__first, __last, typename iterator_traits<_InputIter>::iterator_category());
           ^
../vector_tests/../../../vector.hpp:189:32: note: in instantiation of function template specialization 'std::__1::distance<ft::iterator<int> >' requested here
                difference_type dist =  std::distance(first, last);
                                             ^
../vector_tests/assign().cpp:32:12: note: in instantiation of function template specialization 'ft::vector<int, std::__1::allocator<int> >::assign<ft::iterator<int> >' requested here
    vector.assign(tmp.begin(), tmp.end());
           ^
../vector_tests/assign().cpp:46:61: note: in instantiation of function template specialization 'assign_test<int>' requested here
    exit(run_vector_unit_test<int>("assign()", assign_test, assign_test));
                                                            ^
../vector_tests/../../../iterator.hpp:187:12: note: candidate function not viable: no known conversion from 'ft::iterator<int>' to 'ft::iterator::difference_type' (aka 'long') for 1st argument
                iterator operator-(difference_type n) const // not working
                         ^
1 error generated.
